Pedidos salvos no banco de dados com sucesso

--- a/views/criar-conta.ejs
+++ b/views/criar-conta.ejs
@@ -12,7 +12,7 @@
       </div>
       <div class="bttn-newcount">
           <p><button>
-              <a href="/solicitar-servico"> Preciso de um profissional</button></p></a>
+              <a href="/cadastro-tomador-servico"> Preciso de um profissional</button></p></a>
           <p><button>
               <a href="/cadastro-prestador">Quero ser parceiro</button></p></a> 
       </div>
