--- a/views/solicitar-servico-eletricista.ejs
+++ b/views/solicitar-servico-eletricista.ejs
@@ -71,6 +71,7 @@
                             </section >
                             <div class="botaoServico">
                               <button type="submit" class="btn btn-enviar">Enviar</button>
+                                <!-- <a href="/dashboard-pedidos-prestador">Enviar</a> -->
                             </div>
                           </form> 
                         </div>
