--- a/views/dashboard-pedidos-tomador.ejs
+++ b/views/dashboard-pedidos-tomador.ejs
@@ -14,43 +14,29 @@
           </h2>
         </div>
       </section>
+      <section>
+        <div class="display-pedidos">
+          <ul>
+            <% pedidos.forEach((pedido, i) => { %>
+              <li>
+                <div>
+                  <h3>Pedido <%= i + 1 %> </h3>
+                </div>
+                <div class="order-box selected" id="<%= pedido.status_id %> ">
+                  <h4>STATUS: <%= status.filter(item => item.id === pedido.status_id)[0].tipo_status %> </h4>
+                  <a href="/dashboard-tomador-pedido/<%= pedido.id %> ">
+                    <div class="button">Detalhes do Pedido</div>
+                  </a>
+                </div>
+              </li>
+           <% }) %> 
+          </ul>
+        </div>
+      </section>
       <section class="align-center">
         <a href="/solicitar-servico">
           <div class="button-novo">NOVO PEDIDO</div>
         </a>
-      </section>
-      <section>
-        <div class="display-pedidos">
-          <ul>
-            <div>
-              <h3>Pedido 01</h3>
-            </div>
-            <div class="order-box selected">
-              <h4>STATUS: PROFISSIONAL ENCONTRADO</h4>
-              <a href="/dashboard-tomador-pedido">
-                <div class="button">Detalhes do Pedido</div>
-              </a>
-            </div>
-            <div>
-              <h3>Pedido 02</h3>
-            </div>
-            <div class="order-box">
-              <h4>STATUS: PENDENTE</h4>
-              <a href="/dashboard-tomador-pedido">
-                <div class="button">Detalhes do Pedido</div>
-              </a>
-            </div>
-            <div>
-              <h3>Pedido 03</h3>
-            </div>
-            <div class="order-box">
-              <h4>STATUS: PENDENTE</h4>
-              <a hhref="/dashboard-tomador-pedido">
-                <div class="button">Detalhes do Pedido</div>
-              </a>
-            </div>
-          </ul>
-        </div>
       </section>
     </main>
     <%- include('./partials/footer') %>
