--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
               </a>
           </div>
           <div class="servicos-img">
-              <img src="images/home-obra.png" alt="Serviços da sua casa">
+              <img src="/images/home-obra.png" alt="Serviços da sua casa">
           </div>
         </div>
       </section>
