--- a/views/solicitar-servico-pintor.ejs
+++ b/views/solicitar-servico-pintor.ejs
@@ -42,16 +42,16 @@
                             <div>
                               <label>TIPO DE RESIDÊNCIA</label><br>
                               <div>
-                                <input type="radio" value="casa" name="descricao_residencia" id="casa">
+                                <input type="radio" value="Casa" name="descricao_residencia" id="casa">
                                 <label for="casa">Casa</label><br>
-                                <input type="radio" value="apartamento" name="descricao_residencia" id="apartamento">
+                                <input type="radio" value="Apartamento" name="descricao_residencia" id="apartamento">
                                 <label for="apartamento">Apartamento</label> <br>
                               </div>
                               <label>TIPO DE DEMANDA</label>
                               <div>
-                                <input type="radio" value="manutencao" name="descricao_demanda" id="manutencao">
+                                <input type="radio" value="Manutencao" name="descricao_demanda" id="manutencao">
                                 <label for="manutencao">Manutenção</label><br>
-                                <input type="radio" value="reforma" name="descricao_demanda" id="reforma">
+                                <input type="radio" value="Reforma" name="descricao_demanda" id="reforma">
                                 <label for="reforma">Reforma</label> <br>             
                               </div>
                             </div>
