--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,6 +49,9 @@
                 <li>
                   <a class="nav-link" href="/dashboard-pedidos-prestador">Solicitações</a>
                 </li>
+                <li>
+                  <a class="nav-link" href="/dashboard-servicos-prestador">Serviços</a>
+                </li>
               <% } else { %>
                 <li>
                   <a class="nav-link" href="/solicitar-servico">Novo Serviço</a>
