--- a/views/dashboard-servicos-prestador.ejs
+++ b/views/dashboard-servicos-prestador.ejs
@@ -10,7 +10,7 @@
         <div>
           <h1 class="title-h1">PRESTADOR DE SERVIÇO</h1>
           <h2 class="title-h2">
-            Confira abaixo o andamento das suas solicitações:
+            Confira abaixo a situação dos serviços que foram aceitados por você
           </h2>
         </div>
       </section>
@@ -21,7 +21,7 @@
               <% pedidos.forEach((pedido, i) => { %>
                 <li>
                   <div>
-                    <h3>Pedido <%= i + 1 %>, ID - <%= pedido.id %></h3>
+                    <h3>Pedido <%= i + 1 %> - ID - <%= pedido.id %></h3>
                   </div>
                   <div class="order-box selected" id="<%= pedido.status_id %> ">
                     <h4>STATUS: <%= status.filter(item => item.id === pedido.status_id)[0].tipo_status %> </h4>
