--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,9 +14,9 @@
                     </div>
                     <% if (typeof message !== "undefined" && message !== null) { %>
                         <div class="alert alert-danger" role="alert">
-                          <ul> 
-                              <li><%= message %></li>
-                          </ul>
+                           
+                              <span><%= message %></span>
+                          
                         </div>
                         <% } %> 
                     <nav class="nav_tabs">
