--- a/views/dashboard-pedidos-tomador.ejs
+++ b/views/dashboard-pedidos-tomador.ejs
@@ -20,13 +20,16 @@
             <% pedidos.forEach((pedido, i) => { %>
               <li>
                 <div>
-                  <h3>Pedido <%= i + 1 %> </h3>
+                  <h3>Pedido <%= i + 1 %> (ID: <%= pedido.id %> )</h3>
                 </div>
-                <div class="order-box selected" id="<%= pedido.status_id %> ">
-                  <h4>STATUS: <%= status.filter(item => item.id === pedido.status_id)[0].tipo_status %> </h4>
+                <div class="order-box selected">
+                  <h4 id="status-<%= pedido.status_id %>">STATUS: <%= status.filter(item => item.id === pedido.status_id)[0].tipo_status %> </h4>
                   <a href="/dashboard-tomador-pedido/<%= pedido.id %> ">
                     <div class="button">Detalhes do Pedido</div>
                   </a>
+                  <% if (pedido.prestador_id === 1) { %>
+                   <p style="color:red">Solicitação não aceita por um prestador</p>
+                  <% } %>
                 </div>
               </li>
            <% }) %> 
