chore: update assinaturas

--- a/views/como-funciona.ejs
+++ b/views/como-funciona.ejs
@@ -14,10 +14,10 @@
       <section id="information">
         <div class="list-of-advantages">
           <ul class="timeline">
+            <li><span>Realize o cadastro na plataforma</span></li>
             <li><span>Procure pelo serviço que vai resolver o seu problema</span></li>
-            <li><span>Detalhe o seu problema, se preciso envie imagens e cadastre-se</span></li>
-            <li><span>Receba orçamentos para o seu pedido.</span></li>
-            <li><span>Escolha o melhor orçamento e feche o serviço</span></li>
+            <li><span>Detalhe-o, deixamos algumas alternativas para lhe ajudar</span></li>
+            <li><span>Receba o aceite de um profissional e aceite se deseja aquela solução</span></li>
           </ul>
         </div>
       </section>
