--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -52,6 +52,9 @@
                 <li>
                   <a class="nav-link" href="/dashboard-servicos-prestador">Serviços</a>
                 </li>
+                <li>
+                  <a class="nav-link" href="/plano">Financeiro</a>
+                </li>
               <% } else { %>
                 <li>
                   <a class="nav-link" href="/solicitar-servico">Novo Serviço</a>
