--- a/views/dashboard-tomador-pedido.ejs
+++ b/views/dashboard-tomador-pedido.ejs
@@ -52,6 +52,9 @@
                 <p>Na plataforma desde <%= prestador.data_inicio.split('-')[0] %>  </p>
                 <p><b>Serviço Prestado</b></p>
                 <span><%= servico.descricao_servico %> </span>
+                <p>
+                  Telefone: <b><%= prestador.telefone %> </b>
+                </p>      
             </div>
           </div>
 
