--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,22 +15,22 @@
               <ul class="social-item" t>
                 <li>
                   <a href="http://www.facebook.com.br">
-                    <img src="images/face.png" alt="Facebook"
+                    <img src="/images/face.png" alt="Facebook"
                   /></a>
                 </li>
                 <li>
                   <a href="http://www.instagram.com"
-                    ><img src="images/inst.png" alt="Instagram"
+                    ><img src="/images/inst.png" alt="Instagram"
                   /></a>
                 </li>
                 <li>
                   <a href="http://www.twitter.com"
-                    ><img src="images/tw.png" alt="Twitter"
+                    ><img src="/images/tw.png" alt="Twitter"
                   /></a>
                 </li>
                 <li>
                   <a href="http://www.youtube.com.br"
-                    ><img src="images/you.png" alt="YouTube"
+                    ><img src="/images/you.png" alt="YouTube"
                   /></a>
                 </li>
               </ul>
