--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
       <!--Brand/Logo-->
       <a class="navbar-brand" href="/">
         <img
-          src="images/logo2.png"
+          src="/images/logo2.png"
           alt="Helper House"
           width="140px"
           height="70px"
