chore: insert on service register: servico_id

--- a/views/cadastro-prestador.ejs
+++ b/views/cadastro-prestador.ejs
@@ -46,7 +46,13 @@
                     </div>
                     <div class="form-group">
                         <input required class="form-control" type="text" id="registro"  placeholder="CPF/CNPJ" name="cpf_cnpj" >
-                    </div>    
+                    </div>
+                    <select name="servico_id" class="form-select" aria-label="Selecionar Servicos">
+                        <option selected>Selecione um serviço</option>
+                        <option value="1">Eletricista</option>
+                        <option value="2">Encanador</option>
+                        <option value="3">Pintor</option>
+                    </select>    
                 </div>
                 
                 <div class="arquivos">
