--- a/views/dashboard-servicos-prestador.ejs
+++ b/views/dashboard-servicos-prestador.ejs
@@ -31,7 +31,11 @@
                   </div>
                 </li>
              <% }) %> 
-            <% } %>
+            <% }  else { %>
+              <li>
+                <b style="color: red">Nenhum serviço disponível</b>
+              </li>
+          <% } %> %>
           </ul>
         </div>
       </section>
